--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -9,10 +9,10 @@ jobs:
       - name: 1. جلب الكود
         uses: actions/checkout@v4
 
-      - name: 2. إعداد البيئة (Node 22 & Java 21)
+      - name: 2. إعداد البيئة (Node 22 & Java 17)
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '17' # سنستخدم 17 للتوافق الأوسع مع أدوات التوقيع
           distribution: 'temurin'
 
       - name: إعداد Node.js
@@ -38,16 +38,16 @@ jobs:
         run: |
           cd android
           chmod +x gradlew
+          # إجبار جافا 17 على البناء لضمان توافق التوقيع
           ./gradlew assembleRelease
 
-      - name: 6. التوقيع الرقمي (الإصدار المرن)
-        # استخدمنا أداة ilp0 لأنها تحل مشاكل تشفير Java الحديثة ومسارات zipalign
-        uses: ilp0/sign-android-release@v1
+      - name: 6. التوقيع الرقمي (الإصدار المستقر)
+        uses: r0adkll/sign-android-release@v1
         id: sign_app
         with:
-          releaseDir: android/app/build/outputs/apk/release
-          signingKey: ${{ secrets.SIGNING_KEY }}
-          keyAlias: ${{ secrets.ALIAS }}
+          releaseDirectory: android/app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
         env:
@@ -57,5 +57,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Roqa-Final-APK
-          # هذا المسار سيلتقط ملف الـ APK الموقع والجاهز
-          path: android/app/build/outputs/apk/release/*.apk
+          path: |
+            android/app/build/outputs/apk/release/*-signed.apk
+            android/app/build/outputs/apk/release/*.apk
