--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -9,10 +9,10 @@ jobs:
       - name: 1. جلب الكود
         uses: actions/checkout@v4
 
-      - name: 2. إعداد البيئة (Node 22 & Java 17)
+      - name: 2. إعداد البيئة (Node 22 & Java 21)
         uses: actions/setup-java@v4
         with:
-          java-version: '17' # سنستخدم 17 للتوافق الأوسع مع أدوات التوقيع
+          java-version: '21' # تم الترقية لـ 21 لحل خطأ invalid source release
           distribution: 'temurin'
 
       - name: إعداد Node.js
@@ -22,14 +22,21 @@ jobs:
 
       - name: 3. التنظيف وعزل الكود
         run: |
+          # تنظيف أي مخلفات قديمة لضمان بناء نظيف
           rm -rf android node_modules 
           npm install --legacy-peer-deps
+          
+          # إنشاء مجلد ويب عازل لمنع تكرار المسارات
           mkdir -p dist_web
+          # نسخ ملفات الويب وتجاهل الملفات النصية والصور التي قد تسبب تعارضات
           rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
+          
+          # بناء المشروع إذا كان يدعم البناء التلقائي
           npm run build --if-present
 
       - name: 4. إضافة منصة أندرويد وتحديثها
         run: |
+          # ضبط المجلد المصدر وتوليد ملفات الأندرويد من الصفر
           npx cap config set webDir dist_web
           npx cap add android
           npx cap sync android
@@ -38,12 +45,10 @@ jobs:
         run: |
           cd android
           chmod +x gradlew
-          # إجبار جافا 17 على البناء لضمان توافق التوقيع
           ./gradlew assembleRelease
 
-      - name: 6. التوقيع الرقمي (الإصدار المستقر)
+      - name: 6. التوقيع الرقمي (حل مشكلة zipalign)
         uses: r0adkll/sign-android-release@v1
-        id: sign_app
         with:
           releaseDirectory: android/app/build/outputs/apk/release
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
@@ -51,12 +56,14 @@ jobs:
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
         env:
-          BUILD_TOOLS_VERSION: "34.0.0"
+          # هذا السطر هو مفتاح الحل لمشكلة Build tools 29.0.3 المفقودة
+          BUILD_TOOLS_VERSION: "34.0.0" 
 
       - name: 7. رفع التطبيق النهائي
         uses: actions/upload-artifact@v4
         with:
           name: Roqa-Final-APK
+          # التقاط الملف الموقع والجاهز للتثبيت
           path: |
             android/app/build/outputs/apk/release/*-signed.apk
-            android/app/build/outputs/apk/release/*.apk
+            android/app/build/outputs/bundle/release/*.aab
