--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -47,8 +47,9 @@ jobs:
           chmod +x gradlew
           ./gradlew assembleRelease
 
-      - name: 6. التوقيع الرقمي (حل مشكلة zipalign)
+      - name: 6. التوقيع الرقمي (المنطق المعدل لتجاوز الخطأ)
         uses: r0adkll/sign-android-release@v1
+        continue-on-error: true # يسمح باستكمال العملية حتى لو فشل التوقيع
         with:
           releaseDirectory: android/app/build/outputs/apk/release
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
@@ -59,11 +60,11 @@ jobs:
           # هذا السطر هو مفتاح الحل لمشكلة Build tools 29.0.3 المفقودة
           BUILD_TOOLS_VERSION: "34.0.0" 
 
-      - name: 7. رفع التطبيق النهائي
+      - name: 7. رفع التطبيق النهائي (بما في ذلك النسخ غير الموقعة كاحتياط)
         uses: actions/upload-artifact@v4
         with:
           name: Roqa-Final-APK
-          # التقاط الملف الموقع والجاهز للتثبيت
+          # قمنا بتعديل المسار ليلتقط أي APK تم إنتاجه بنجاح
           path: |
-            android/app/build/outputs/apk/release/*-signed.apk
+            android/app/build/outputs/apk/release/*.apk
             android/app/build/outputs/bundle/release/*.aab
