--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -12,7 +12,7 @@ jobs:
       - name: 2. إعداد البيئة (Node 22 & Java 21)
         uses: actions/setup-java@v4
         with:
-          java-version: '21' # تم الترقية لـ 21 لحل خطأ invalid source release
+          java-version: '21'
           distribution: 'temurin'
 
       - name: إعداد Node.js
@@ -22,59 +22,55 @@ jobs:
 
       - name: 3. التنظيف وعزل الكود
         run: |
-          # تنظيف أي مخلفات قديمة لضمان بناء نظيف
           rm -rf android node_modules 
           npm install --legacy-peer-deps
-          
-          # إنشاء مجلد ويب عازل لمنع تكرار المسارات
           mkdir -p dist_web
-          # نسخ ملفات الويب وتجاهل الملفات النصية والصور التي قد تسبب تعارضات
           rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
-          
-          # بناء المشروع إذا كان يدعم البناء التلقائي
           npm run build --if-present
 
       - name: 4. إضافة منصة أندرويد وتحديثها
         run: |
-          # ضبط المجلد المصدر وتوليد ملفات الأندرويد من الصفر
           npx cap config set webDir dist_web
           npx cap add android
           npx cap sync android
 
-      - name: 5. بناء ملف الـ APK
+      - name: 5. بناء ملفات الـ APK و AAB
         run: |
           cd android
           chmod +x gradlew
+          # بناء APK
           ./gradlew assembleRelease
+          # بناء AAB (للمتجر)
+          ./gradlew bundleRelease
 
-      - name: 6. التوقيع الرقمي (منطق تشخيص الخطأ التفصيلي)
+      - name: 6. التوقيع الرقمي (APK & AAB)
         run: |
-          # 1. تحويل السر إلى ملف Keystore فعلي
           echo "${{ secrets.SIGNING_KEY }}" | base64 -d > release_key.jks
           
-          echo "--- START DIAGNOSIS ---"
-          
-          # 2. اختبار كلمة مرور المتجر واستخراج الـ Alias الحقيقي
-          # تم ضبط الـ Alias هنا ليكون roqa_alias بناءً على الملف المرفوع
-          echo "Checking Keystore Alias and Password..."
-          keytool -list -v -keystore release_key.jks -storepass "${{ secrets.KEY_STORE_PASSWORD }}" | grep "Alias name" || echo "!!! ERROR: Wrong KEY_STORE_PASSWORD or Corrupt Keystore !!!"
-          
-          # 3. محاولة التوقيع مع طباعة الأخطاء البرمجية (Verbose)
-          echo "--- Starting apksigner ---"
-          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --v --ks release_key.jks \
+          # مسارات الملفات الناتجة من Gradle
+          APK_PATH=$(find android/app/build/outputs/apk/release -name "*.apk" ! -name "*signed*")
+          AAB_PATH=$(find android/app/build/outputs/bundle/release -name "*.aab")
+
+          echo "Signing APK: $APK_PATH"
+          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks \
             --ks-key-alias "roqa_alias" \
             --ks-pass pass:"${{ secrets.KEY_STORE_PASSWORD }}" \
             --key-pass pass:"${{ secrets.KEY_PASSWORD }}" \
-            --out android/app/build/outputs/apk/release/app-release-signed.apk \
-            android/app/build/outputs/apk/release/app-release-unsigned.apk || echo "!!! SIGNING FAILED: Check if ALIAS or KEY_PASSWORD is correct !!!"
-          
-          echo "--- END DIAGNOSIS ---"
+            --out android/app/build/outputs/apk/release/Roqa-Final-Signed.apk \
+            "$APK_PATH"
+
+          # ملاحظة: التوقيع لـ AAB يتطلب أداة jarsigner (تأتي مع Java)
+          echo "Signing AAB: $AAB_PATH"
+          jarsigner -keystore release_key.jks \
+            -storepass "${{ secrets.KEY_STORE_PASSWORD }}" \
+            -keypass "${{ secrets.KEY_PASSWORD }}" \
+            "$AAB_PATH" roqa_alias
         continue-on-error: true 
 
-      - name: 7. رفع التطبيق النهائي (بما في ذلك النسخ غير الموقعة كاحتياط)
+      - name: 7. رفع الملفات الموقعة
         uses: actions/upload-artifact@v4
         with:
-          name: Roqa-Signed-Package-Latest
+          name: Roqa-Signed-Package-v${{ github.run_number }}
           path: |
-            android/app/build/outputs/apk/release/*.apk
+            android/app/build/outputs/apk/release/Roqa-Final-Signed.apk
             android/app/build/outputs/bundle/release/*.aab
