--- a/.github/workflows/build-app.yml
+++ b/.github/workflows/build-app.yml
@@ -1,4 +1,4 @@
-name: Roqa Auto-Generate Key and Build
+name: Roqa Final Professional Build Fixed
 on:
   workflow_dispatch:
 
@@ -9,54 +9,71 @@ jobs:
       - name: 1. جلب الكود
         uses: actions/checkout@v4
 
-      - name: 2. إعداد البيئة (Java 21)
+      - name: 2. إعداد البيئة (Node 22 & Java 21)
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: 3. بناء التطبيق (Gradle)
+      - name: إعداد Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: 3. التنظيف وعزل الكود
         run: |
+          rm -rf android node_modules 
           npm install --legacy-peer-deps
+          mkdir -p dist_web
+          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
+          # بناء المشروع إذا كان يدعم البناء التلقائي
           npm run build --if-present
+
+      - name: 4. إضافة منصة أندرويد وتحديثها
+        run: |
+          npx cap config set webDir dist_web
+          npx cap add android
           npx cap sync android
-          cd android && chmod +x gradlew
+
+      - name: 5. بناء ملفات الـ APK و AAB
+        run: |
+          cd android
+          chmod +x gradlew
           ./gradlew assembleRelease
           ./gradlew bundleRelease
 
-      - name: 4. إنشاء مفتاح توقيع جديد وتوقيع الملفات
+      - name: 6. إنشاء ملف التوقيع وتوقيع (APK & AAB)
         run: |
-          # إنشاء مفتاح جديد تماماً داخل السيرفر
+          # 1. إنشاء ملف توقيع جديد تماماً ببيانات ثابتة
           # Alias: roqa_alias | Password: roqa_password_2026
-          keytool -genkey -v -keystore roqa_generated.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
+          keytool -genkey -v -keystore release_key.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
             -storepass "roqa_password_2026" -keypass "roqa_password_2026" \
             -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
+          
+          # 2. تحديد المسارات للملفات الناتجة عن البناء
+          APK_PATH=$(find android/app/build/outputs/apk/release -name "*.apk" ! -name "*signed*")
+          AAB_PATH=$(find android/app/build/outputs/bundle/release -name "*.aab")
 
-          # توقيع ملف الـ APK
-          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks roqa_generated.jks \
+          # 3. توقيع الـ APK باستخدام apksigner
+          /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks \
             --ks-key-alias "roqa_alias" \
             --ks-pass pass:"roqa_password_2026" \
             --key-pass pass:"roqa_password_2026" \
-            --out android/app/build/outputs/apk/release/Roqa-New-Signed.apk \
-            android/app/build/outputs/apk/release/app-release-unsigned.apk || \
-            /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks roqa_generated.jks \
-            --ks-key-alias "roqa_alias" \
-            --ks-pass pass:"roqa_password_2026" \
-            --key-pass pass:"roqa_password_2026" \
-            --out android/app/build/outputs/apk/release/Roqa-New-Signed.apk \
-            android/app/build/outputs/apk/release/app-release.apk
+            --out android/app/build/outputs/apk/release/Roqa-Final-Signed.apk \
+            "$APK_PATH"
 
-          # توقيع ملف الـ AAB (للمتجر)
-          jarsigner -keystore roqa_generated.jks \
+          # 4. توقيع الـ AAB باستخدام jarsigner
+          jarsigner -keystore release_key.jks \
             -storepass "roqa_password_2026" \
             -keypass "roqa_password_2026" \
-            android/app/build/outputs/bundle/release/app-release.aab roqa_alias
+            "$AAB_PATH" roqa_alias
+        continue-on-error: true 
 
-      - name: 5. رفع الناتج (التطبيق + المفتاح الجديد)
+      - name: 7. رفع الملفات الموقعة وملف التوقيع الجديد
         uses: actions/upload-artifact@v4
         with:
-          name: Roqa-Full-Package-With-Key
+          name: Roqa-Full-Package-v${{ github.run_number }}
           path: |
-            android/app/build/outputs/apk/release/Roqa-New-Signed.apk
-            android/app/build/outputs/bundle/release/app-release.aab
-            roqa_generated.jks
+            android/app/build/outputs/apk/release/Roqa-Final-Signed.apk
+            android/app/build/outputs/bundle/release/*.aab
+            release_key.jks
