--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -7,18 +7,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 1. جلب الكود
-        uses: actions/checkout@v4
+        [cite_start]uses: actions/checkout@v4 [cite: 5]
 
       - name: 2. إعداد البيئة (Node 22 & Java 21)
         uses: actions/setup-java@v4
         with:
           java-version: '21'
-          distribution: 'temurin'
+          [cite_start]distribution: 'temurin' [cite: 5]
 
       - name: إعداد Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          [cite_start]node-version: '22' [cite: 5]
 
       - name: 3. التنظيف وعزل الكود
         run: |
@@ -26,77 +26,77 @@ jobs:
           npm install --legacy-peer-deps
           mkdir -p dist_web
           rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
-          npm run build --if-present
+          npm run build --if-present [cite: 5]
 
       - name: 4. إضافة منصة أندرويد وتحديثها
         run: |
           npx cap config set webDir dist_web
           npx cap add android
-          npx cap sync android
+          npx cap sync android [cite: 5]
 
       - name: 5. إضافة صلاحيات الإنترنت والبيانات غير المشفرة
         run: |
-          # إضافة تصريح الإنترنت للمانيفست
-          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml
+          # إضافة تصريح الإنترنت للمانيفست لضمان عمل الـ APIs الخارجية 
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml 
           
-          # تفعيل Cleartext Traffic للسماح بالاتصال بـ Neon/Vercel دون تشفير إلزامي
-          sed -i 's/<application/<application android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml
+          # تفعيل Cleartext Traffic للسماح بالاتصال بـ Neon/Vercel كما في المتصفح 
+          [cite_start]sed -i 's/<application/<application android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml [cite: 6]
 
       - name: 6. ضبط الأيقونات وفيديو شاشة البداية
         run: |
-          # تثبيت أداة توليد الأيقونات
-          npm install @capacitor/assets --save-dev
+          # تثبيت أداة توليد الأيقونات [cite: 5]
+          npm install @capacitor/assets --save-dev [cite: 5]
           
-          # إنشاء مجلدات أندرويد للفيديو إذا لم تكن موجودة
-          mkdir -p android/app/src/main/res/raw
+          # إنشاء مجلدات أندرويد للفيديو [cite: 5]
+          [cite_start]mkdir -p android/app/src/main/res/raw [cite: 5]
           
-          # نقل الفيديو (يجب أن يكون الملف موجود في resources/splash_video.mp4)
+          # نقل الفيديو (يجب أن يكون الملف موجود في resources/splash_video.mp4) [cite: 5]
           if [ -f "resources/splash_video.mp4" ]; then
-            cp resources/splash_video.mp4 android/app/src/main/res/raw/
+            [cite_start]cp resources/splash_video.mp4 android/app/src/main/res/raw/ [cite: 5]
             echo "✅ تم نقل الفيديو بنجاح"
           else
             echo "⚠️ تحذير: لم يتم العثور على resources/splash_video.mp4"
-          fi
+          [cite_start]fi [cite: 5]
 
-          # توليد الأيقونات آلياً من مجلد resources
-          npx capacitor-assets generate --android
+          # توليد الأيقونات آلياً من مجلد resources [cite: 5]
+          [cite_start]npx capacitor-assets generate --android [cite: 5]
 
       - name: 7. بناء ملفات الـ APK و AAB
         run: |
           cd android
           chmod +x gradlew
           ./gradlew assembleRelease
-          ./gradlew bundleRelease
+          ./gradlew bundleRelease [cite: 5]
 
       - name: 8. إنشاء ملف التوقيع وتوقيع الملفات
         run: |
-          # 1. إنشاء ملف التوقيع
+          # 1. إنشاء ملف التوقيع [cite: 5]
           keytool -genkey -v -keystore release_key.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
             -storepass "roqa_password_2026" -keypass "roqa_password_2026" \
-            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
+            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG" [cite: 5]
           
-          # 2. البحث عن الملفات
-          APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
-          AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1)
+          # 2. البحث عن الملفات [cite: 5]
+          [cite_start]APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1) [cite: 5]
+          [cite_start]AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1) [cite: 5]
 
           echo "Found APK at: $APK_FILE"
-          echo "Found AAB at: $AAB_FILE"
+          [cite_start]echo "Found AAB at: $AAB_FILE" [cite: 5]
 
-          # 3. توقيع الـ APK
+          # 3. توقيع الـ APK [cite: 5]
           /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks \
             --ks-key-alias "roqa_alias" \
             --ks-pass pass:"roqa_password_2026" \
             --key-pass pass:"roqa_password_2026" \
             --out Roqa-Final-Signed.apk \
-            "$APK_FILE"
+            [cite_start]"$APK_FILE" [cite: 5]
 
-          # 4. توقيع الـ AAB
+          # 4. توقيع الـ AAB [cite: 5]
           jarsigner -keystore release_key.jks \
             -storepass "roqa_password_2026" \
             -keypass "roqa_password_2026" \
-            "$AAB_FILE" roqa_alias
+            [cite_start]"$AAB_FILE" roqa_alias [cite: 5]
 
-          cp "$AAB_FILE" Roqa-Final-Signed.aab
+          [cite_start]cp "$AAB_FILE" Roqa-Final-Signed.aab [cite: 5]
 
       - name: 9. رفع الملفات الموقعة وملف التوقيع
         uses: actions/upload-artifact@v4
@@ -105,4 +105,4 @@ jobs:
           path: |
             Roqa-Final-Signed.apk
             Roqa-Final-Signed.aab
-            release_key.jks
+            release_key.jks [cite: 5]
