Update and rename . vercel.json to vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,17 @@
       "NODE_VERSION": "20"
     }
   },
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0"
+        }
+      ]
+    }
+  ],
   "crons": [
     {
       "path": "/api/cron-handler",
